# PGdet

./: LICENSE  README.md  pyproject.toml  tox.ini
docs/source/: conf.py
notebooks/: Get_started.ipynb  project_report.ipynb
src/PGdet/: PGdet.py  __init__.py
tests/: test  test.py  test_file.py
