[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AI-for-Point-Group_Determination"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alexandre Keller", email = "alexandre.keller@epfl.ch" },
  { name = "Aldric Mercier", email = "aldric.mercier@epfl.ch" },
  { name = "Miguel", email = "miguel.rodriguesdossantoscorreia@epfl.ch" },
]
dependencies = [
]
