[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PGdet"
version = "0.0.1"
description = 'PGdet is a school project created by students of the Swiss Federal Institute of Technology Lausanne: Aldric Mercier, Alexandre Keller and Miguel Correia. The aim of this code is to take organic molecules written in SMILES and extract their pointgroup.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Alexandre Keller", email = "alexandre.keller@epfl.ch" },
  { name = "Aldric Mercier", email = "aldric.mercier@epfl.ch" },
  { name = "Miguel", email = "miguel.rodriguesdossantoscorreia@epfl.ch" },
]
dependencies = [
    "rdkit>=2023.9.5",
    "numpy>=1.26.4",
    "pointgroup>=0.4.1",
    "matplotlib>=3.8.4"
]

[project.urls]
source = "https://github.com/alexandreklr/PGdet"
